--- a/Titanic_Dataset_Decision_Tree/Decision_tree_Random_Forest.ipynb
+++ b/Titanic_Dataset_Decision_Tree/Decision_tree_Random_Forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.770949720670391\n"
+      "Accuracy: 0.7932960893854749\n"
      ]
     }
    ],
@@ -77,20 +77,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8156424581005587\n"
+      "Accuracy: 0.8324022346368715\n"
      ]
     }
    ],
    "source": [
     "# Create a Random Forest model object\n",
-    "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "'''\n",
+    "Some Important Parameters:-\n",
+    "1. n_estimators:- It defines the number of decision trees to be created in a random forest.\n",
+    "2. criterion:- \"Gini\" or \"Entropy.\"\n",
+    "3. min_samples_split:- Used to define the minimum number of samples required in a leaf \n",
+    "node before a split is attempted\n",
+    "4. max_features: -It defines the maximum number of features allowed for the split in each \n",
+    "decision tree.\n",
+    "5. n_jobs:- The number of jobs to run in parallel for both fit and predict. Always keep (-1) to \n",
+    "use all the cores for parallel processing.\n",
+    "'''\n",
+    "# rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf = RandomForestClassifier(n_estimators=100, min_samples_split=5, random_state=42)\n",
+    "\n",
     "\n",
     "# Fit the model to the training data\n",
     "rf.fit(X_train, y_train)\n",
