--- a/Market_Basket_Analysis/MBA_Algo.ipynb
+++ b/Market_Basket_Analysis/MBA_Algo.ipynb
@@ -2,6 +2,241 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('Groceries_data.csv', sep = ',', header = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# have the first row as the header and drop first row\n",
+    "data.columns = data.iloc[0]\n",
+    "data = data.drop(data.index[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Preprocessing\n",
+    "# 1. Remove the NaN values\n",
+    "data.isnull().sum()\n",
+    "\n",
+    "# 2. Remove the duplicates\n",
+    "data = data.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Types 0\n",
+      "Member_number      object\n",
+      "Date               object\n",
+      "itemDescription    object\n",
+      "year               object\n",
+      "month              object\n",
+      "day                object\n",
+      "day_of_week        object\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Member_number</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>itemDescription</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>day_of_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>38006</td>\n",
+       "      <td>38006</td>\n",
+       "      <td>38006</td>\n",
+       "      <td>38006</td>\n",
+       "      <td>38006</td>\n",
+       "      <td>38006</td>\n",
+       "      <td>38006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>3898</td>\n",
+       "      <td>728</td>\n",
+       "      <td>167</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>3180</td>\n",
+       "      <td>2015-01-21</td>\n",
+       "      <td>whole milk</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>8</td>\n",
+       "      <td>28</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>35</td>\n",
+       "      <td>96</td>\n",
+       "      <td>2363</td>\n",
+       "      <td>19981</td>\n",
+       "      <td>3435</td>\n",
+       "      <td>1347</td>\n",
+       "      <td>5630</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "0      Member_number        Date itemDescription   year  month    day  \\\n",
+       "count          38006       38006           38006  38006  38006  38006   \n",
+       "unique          3898         728             167      2     12     31   \n",
+       "top             3180  2015-01-21      whole milk   2015      8     28   \n",
+       "freq              35          96            2363  19981   3435   1347   \n",
+       "\n",
+       "0      day_of_week  \n",
+       "count        38006  \n",
+       "unique           7  \n",
+       "top              3  \n",
+       "freq          5630  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Data Types\",data.dtypes)\n",
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of items that are bought more than 100 times: 77\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt=0\n",
+    "for i in data['itemDescription'].value_counts()>100:\n",
+    "    if i == True:\n",
+    "        cnt+=1\n",
+    "print(\"Number of items that are bought more than 100 times:\",cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the items which were bought less than 100 times\n",
+    "data = data.dropna(axis = 1, thresh = 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "support = 0.01\n",
+    "confidence = 0.2\n",
+    "\n",
+    "unique_items = []\n",
+    "# 1. Find the unique items\n",
+    "unique_items = data['itemDescription'].unique()\n",
+    "# unique_items"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apriori Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,10 +244,29 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "c261aea317cc0286b3b3261fbba9abdec21eaa57589985bb7a274bf54d6cc0a7"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
