--- a/Titanic_Dataset_Decision_Tree/ML_Algos.ipynb
+++ b/Titanic_Dataset_Decision_Tree/ML_Algos.ipynb
@@ -278,6 +278,44 @@
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Accuracy:\", accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "### CHANGGE HERE ###\n",
+    "# # Define the steps of the pipeline\n",
+    "# steps = [('scaler', StandardScaler()),\n",
+    "#          ('pca', PCA(n_components=2)),\n",
+    "#          ('classifier', LogisticRegression())]\n",
+    "\n",
+    "pipeline = Pipeline(steps) # Create the pipeline\n",
+    "pipeline.fit(X_train, y_train) # Fit the pipeline to the training data\n",
+    "y_pred = pipeline.predict(X_test) # Predict the labels of the test set\n",
+    "accuracy = pipeline.score(X_test, y_test) # Calculate the accuracy on the test set"
+   ]
   }
  ],
  "metadata": {
