--- a/GANs_Self_Practice.ipynb
+++ b/GANs_Self_Practice.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlbE9hYxBnJSF/5c1ezhxO",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyMjhXBw+5ZnK8aBAWKsK5eY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,9 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -42,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 1,
       "metadata": {
         "id": "hIRtYpRL9W7j"
       },
@@ -67,7 +70,7 @@
       "metadata": {
         "id": "C7Dw-eU_92xh"
       },
-      "execution_count": 23,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -86,17 +89,19 @@
       ],
       "metadata": {
         "id": "gLrx05In9psX",
-        "outputId": "9ff928a0-b65c-4df0-c82c-df504e8b8a1c",
+        "outputId": "aa71d298-4da7-43a7-9068-8a1a30fac99a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11490434/11490434 [==============================] - 2s 0us/step\n",
             "Number of examples: 60000\n",
             "Shape of the images in the dataset: (28, 28)\n"
           ]
@@ -192,12 +197,12 @@
       ],
       "metadata": {
         "id": "Yjy58NsT90Fj",
-        "outputId": "7d2787ad-a7d3-4384-9a18-45920b1f264f",
+        "outputId": "7755bca7-3139-49aa-952a-3eeebe86d848",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,36 +212,36 @@
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " input_5 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
+            " input_1 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
             "                                                                 \n",
-            " zero_padding2d_2 (ZeroPaddi  (None, 32, 32, 1)        0         \n",
-            " ng2D)                                                           \n",
+            " zero_padding2d (ZeroPadding  (None, 32, 32, 1)        0         \n",
+            " 2D)                                                             \n",
             "                                                                 \n",
-            " conv2d_14 (Conv2D)          (None, 16, 16, 64)        1664      \n",
+            " conv2d (Conv2D)             (None, 16, 16, 64)        1664      \n",
             "                                                                 \n",
-            " leaky_re_lu_14 (LeakyReLU)  (None, 16, 16, 64)        0         \n",
+            " leaky_re_lu (LeakyReLU)     (None, 16, 16, 64)        0         \n",
             "                                                                 \n",
-            " conv2d_15 (Conv2D)          (None, 8, 8, 128)         204928    \n",
+            " conv2d_1 (Conv2D)           (None, 8, 8, 128)         204928    \n",
             "                                                                 \n",
-            " leaky_re_lu_15 (LeakyReLU)  (None, 8, 8, 128)         0         \n",
+            " leaky_re_lu_1 (LeakyReLU)   (None, 8, 8, 128)         0         \n",
             "                                                                 \n",
-            " dropout_6 (Dropout)         (None, 8, 8, 128)         0         \n",
+            " dropout (Dropout)           (None, 8, 8, 128)         0         \n",
             "                                                                 \n",
-            " conv2d_16 (Conv2D)          (None, 4, 4, 256)         819456    \n",
+            " conv2d_2 (Conv2D)           (None, 4, 4, 256)         819456    \n",
             "                                                                 \n",
-            " leaky_re_lu_16 (LeakyReLU)  (None, 4, 4, 256)         0         \n",
+            " leaky_re_lu_2 (LeakyReLU)   (None, 4, 4, 256)         0         \n",
             "                                                                 \n",
-            " dropout_7 (Dropout)         (None, 4, 4, 256)         0         \n",
+            " dropout_1 (Dropout)         (None, 4, 4, 256)         0         \n",
             "                                                                 \n",
-            " conv2d_17 (Conv2D)          (None, 2, 2, 512)         3277312   \n",
+            " conv2d_3 (Conv2D)           (None, 2, 2, 512)         3277312   \n",
             "                                                                 \n",
-            " leaky_re_lu_17 (LeakyReLU)  (None, 2, 2, 512)         0         \n",
+            " leaky_re_lu_3 (LeakyReLU)   (None, 2, 2, 512)         0         \n",
             "                                                                 \n",
-            " flatten_2 (Flatten)         (None, 2048)              0         \n",
+            " flatten (Flatten)           (None, 2048)              0         \n",
             "                                                                 \n",
-            " dropout_8 (Dropout)         (None, 2048)              0         \n",
+            " dropout_2 (Dropout)         (None, 2048)              0         \n",
             "                                                                 \n",
-            " dense_4 (Dense)             (None, 1)                 2049      \n",
+            " dense (Dense)               (None, 1)                 2049      \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 4,305,409\n",
@@ -322,12 +327,12 @@
       ],
       "metadata": {
         "id": "4wRdcioU-FuD",
-        "outputId": "10a0f06b-5bd2-478e-c562-ed895b5a1649",
+        "outputId": "de510572-b923-4d8a-ee87-78d4e6163471",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,48 +342,48 @@
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " input_6 (InputLayer)        [(None, 128)]             0         \n",
+            " input_2 (InputLayer)        [(None, 128)]             0         \n",
             "                                                                 \n",
-            " dense_5 (Dense)             (None, 4096)              524288    \n",
+            " dense_1 (Dense)             (None, 4096)              524288    \n",
             "                                                                 \n",
-            " batch_normalization_8 (Batc  (None, 4096)             16384     \n",
+            " batch_normalization (BatchN  (None, 4096)             16384     \n",
+            " ormalization)                                                   \n",
+            "                                                                 \n",
+            " leaky_re_lu_4 (LeakyReLU)   (None, 4096)              0         \n",
+            "                                                                 \n",
+            " reshape (Reshape)           (None, 4, 4, 256)         0         \n",
+            "                                                                 \n",
+            " up_sampling2d (UpSampling2D  (None, 8, 8, 256)        0         \n",
+            " )                                                               \n",
+            "                                                                 \n",
+            " conv2d_4 (Conv2D)           (None, 8, 8, 128)         294912    \n",
+            "                                                                 \n",
+            " batch_normalization_1 (Batc  (None, 8, 8, 128)        512       \n",
             " hNormalization)                                                 \n",
             "                                                                 \n",
-            " leaky_re_lu_18 (LeakyReLU)  (None, 4096)              0         \n",
+            " leaky_re_lu_5 (LeakyReLU)   (None, 8, 8, 128)         0         \n",
             "                                                                 \n",
-            " reshape_2 (Reshape)         (None, 4, 4, 256)         0         \n",
-            "                                                                 \n",
-            " up_sampling2d_6 (UpSampling  (None, 8, 8, 256)        0         \n",
+            " up_sampling2d_1 (UpSampling  (None, 16, 16, 128)      0         \n",
             " 2D)                                                             \n",
             "                                                                 \n",
-            " conv2d_18 (Conv2D)          (None, 8, 8, 128)         294912    \n",
+            " conv2d_5 (Conv2D)           (None, 16, 16, 64)        73728     \n",
             "                                                                 \n",
-            " batch_normalization_9 (Batc  (None, 8, 8, 128)        512       \n",
+            " batch_normalization_2 (Batc  (None, 16, 16, 64)       256       \n",
             " hNormalization)                                                 \n",
             "                                                                 \n",
-            " leaky_re_lu_19 (LeakyReLU)  (None, 8, 8, 128)         0         \n",
+            " leaky_re_lu_6 (LeakyReLU)   (None, 16, 16, 64)        0         \n",
             "                                                                 \n",
-            " up_sampling2d_7 (UpSampling  (None, 16, 16, 128)      0         \n",
+            " up_sampling2d_2 (UpSampling  (None, 32, 32, 64)       0         \n",
             " 2D)                                                             \n",
             "                                                                 \n",
-            " conv2d_19 (Conv2D)          (None, 16, 16, 64)        73728     \n",
+            " conv2d_6 (Conv2D)           (None, 32, 32, 1)         576       \n",
             "                                                                 \n",
-            " batch_normalization_10 (Bat  (None, 16, 16, 64)       256       \n",
-            " chNormalization)                                                \n",
+            " batch_normalization_3 (Batc  (None, 32, 32, 1)        4         \n",
+            " hNormalization)                                                 \n",
             "                                                                 \n",
-            " leaky_re_lu_20 (LeakyReLU)  (None, 16, 16, 64)        0         \n",
+            " activation (Activation)     (None, 32, 32, 1)         0         \n",
             "                                                                 \n",
-            " up_sampling2d_8 (UpSampling  (None, 32, 32, 64)       0         \n",
-            " 2D)                                                             \n",
-            "                                                                 \n",
-            " conv2d_20 (Conv2D)          (None, 32, 32, 1)         576       \n",
-            "                                                                 \n",
-            " batch_normalization_11 (Bat  (None, 32, 32, 1)        4         \n",
-            " chNormalization)                                                \n",
-            "                                                                 \n",
-            " activation_2 (Activation)   (None, 32, 32, 1)         0         \n",
-            "                                                                 \n",
-            " cropping2d_2 (Cropping2D)   (None, 28, 28, 1)         0         \n",
+            " cropping2d (Cropping2D)     (None, 28, 28, 1)         0         \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 910,660\n",
@@ -508,7 +513,7 @@
       "metadata": {
         "id": "741aTZeF-I0j"
       },
-      "execution_count": 41,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -533,7 +538,7 @@
       "metadata": {
         "id": "rrZB8YUi-RuV"
       },
-      "execution_count": 42,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -589,19 +594,88 @@
       ],
       "metadata": {
         "id": "ZTnfLt1y-V5r",
-        "outputId": "4b0b6a6b-c332-492d-e232-e4446531c1ef",
+        "outputId": "dd9e1aae-35b7-4aa0-b954-e51dd6254185",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/20\n",
-            " 20/118 [====>.........................] - ETA: 2:44:19 - d_loss: -17.5675 - g_loss: -13.2239"
+            "Epoch 1/5\n",
+            "118/118 [==============================] - 168s 1s/step - d_loss: -16.3517 - g_loss: -17.0377\n",
+            "Epoch 2/5\n",
+            "118/118 [==============================] - 150s 1s/step - d_loss: -14.8273 - g_loss: -7.8436\n",
+            "Epoch 3/5\n",
+            "118/118 [==============================] - 153s 1s/step - d_loss: -13.4419 - g_loss: -5.0283\n",
+            "Epoch 4/5\n",
+            "118/118 [==============================] - 152s 1s/step - d_loss: -12.3613 - g_loss: -1.8054\n",
+            "Epoch 5/5\n",
+            "118/118 [==============================] - 153s 1s/step - d_loss: -11.3491 - g_loss: 0.3407\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7ff00534ba00>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import save_model"
+      ],
+      "metadata": {
+        "id": "kvCXYiFr-ZkW"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wgan.save_weights('wgan_gp_generator_weights.h5')"
+      ],
+      "metadata": {
+        "id": "AWrMRchpOg-g"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assuming your trained generator model is called 'generator'\n",
+        "tf.saved_model.save(wgan, 'wgan_gp_saved_model')"
+      ],
+      "metadata": {
+        "id": "yYjzwogd-eRi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c3f6f38c-865f-46fa-9b64-0e61083e553c"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:Skipping full serialization of Keras layer <__main__.WGAN object at 0x7ff0053d4e20>, because it is not built.\n",
+            "WARNING:tensorflow:Model's `__init__()` arguments contain non-serializable objects. Please implement a `get_config()` method in the subclassed Model for proper saving and loading. Defaulting to empty config.\n",
+            "WARNING:tensorflow:Model's `__init__()` arguments contain non-serializable objects. Please implement a `get_config()` method in the subclassed Model for proper saving and loading. Defaulting to empty config.\n",
+            "WARNING:absl:Found untraced functions such as _update_step_xla, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 8). These functions will not be directly callable after loading.\n"
           ]
         }
       ]
@@ -610,27 +684,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "kvCXYiFr-ZkW"
-      },
-      "execution_count": 31,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yYjzwogd-eRi"
-      },
-      "execution_count": 32,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
         "id": "x7PYIrQ6-7m0"
       },
-      "execution_count": 33,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -639,7 +695,7 @@
       "metadata": {
         "id": "14lQSAKb_IHD"
       },
-      "execution_count": 35,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -648,7 +704,7 @@
       "metadata": {
         "id": "7aXbKKtn_LIS"
       },
-      "execution_count": 36,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -657,7 +713,7 @@
       "metadata": {
         "id": "hvdivbaF_sc_"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     }
   ]
